# HttpFileGenerator

./: .eslintrc.json  Cargo.toml  README.md  package.json  test-setup.ts  tsconfig.json
src/: index.ts  main.rs
src/business/request/: ast-to-http-request.ts  convert-to-string.ts
src/entities/: http-file.ts
src/httpRequest/: mod.rs
test/unit/: ast-to-http-request.test.ts
