[package]
name = "HttpFileGenerator"
version = "0.1.0"
authors = ["marlon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postman_collection = { path = "../postman-collection-rs" }
serde_json = "1.0.64"
string-builder = "0.2.0"
